<resources>
    <string name="app_name">SmartSplit</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="signin">SIGNIN</string>
    <string name="register">REGISTER</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="enter_email_address">Enter Email Address</string>
</resources>
